tests/baselines/reference/unicodeExtendedEscapesInStrings17(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
unicodeExtendedEscapesInStrings17.ts(1,13): error TS1125: Hexadecimal digit expected.
unicodeExtendedEscapesInStrings17.ts(1,18): error TS1125: Hexadecimal digit expected.
unicodeExtendedEscapesInStrings17.ts(1,23): error TS1125: Hexadecimal digit expected.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== unicodeExtendedEscapesInStrings17.ts (3 errors) ====
    var x = "\u{r}\u{n}\u{t}";
                
!!! error TS1125: Hexadecimal digit expected.
                     
!!! error TS1125: Hexadecimal digit expected.
                          
!!! error TS1125: Hexadecimal digit expected.
    